# language_modeling

./: pyproject.toml
bigram/: bigram.ipynb
gpt2/: play.ipynb  train_gpt2.py
mlp/: mlp.ipynb  mlp_torch_cuda.ipynb  mlp_torch_cuda_correct.ipynb
